# maamarketbrief

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: cache.py  config.py  email_sender.py  main.py  scheduler.py  snapshot.py  sparkline.py
app/sources/: _nemweb.py  accc.py  asx_futures.py  demand_forecast.py  dispatch_unit.py  duid_registry.py  dwgm.py  equities.py  gbb.py  genmix.py  gsh.py  interconnectors.py  macro.py  nem.py  rooftop_pv.py  storage.py  sttm.py  wagbb.py  weather.py
app/static/: style.css
app/templates/: dashboard.html  email.html
deploy/: Caddyfile  deploy.sh  markets-brief.service  markets-email.service  markets-email.timer  update.sh
tests/: test_parsers.py
tests/fixtures/: accc_lng_netback.xlsx  dwgm_int041_market_and_reference_prices.csv  nem_registration_list.xlsx  sttm_int651_ex_ante_market_price.csv  wagbb_actualflow.json  wagbb_actualflow_day.json
