[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markets-brief"
version = "0.1.0"
description = "Australian energy markets dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=15",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["app*"]
